--- a/app/src/main/res/menu/options_list.xml
+++ b/app/src/main/res/menu/options_list.xml
@@ -7,4 +7,9 @@
         android:title="Logout"
         app:showAsAction="never"/>
 
+    <item
+        android:id="@+id/refreshToken"
+        android:title="Refresh token"
+        app:showAsAction="never"/>
+
 </menu>
