--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/main_activity"
-        tools:context=".LoginActivity">
+        tools:context=".activities.LoginActivity">
 
     <WebView android:id="@+id/webView"
              xmlns:android="http://schemas.android.com/apk/res/android"
